# bag

./: .gitignore  Cargo.toml  _onnx.py  audio.py  camera.py  channel.py  detect.py  download.py  main.py  measure.py  media.py  onnx.py  run.py  run.sh  setup.cfg  utility.py  vector.py  window.py  yolo.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
code/: audio.py  camera.py  cell.py  channel.py  detect.py  main.py  measure.py  test.py  test_onnx.py  utility.py  vector.py  window.py  yolo.py
instruments/: 1_square.py  2_fm.py  2_super_saw.py  3_fm.py  3_super_saw  flute.py  fm.py  pad.py  ploop.py  prout.py  spectre.py
models/mediapipe/: convert.py  convert.sh  download.sh
models/yolo/: download.py
src/: main.rs  model.rs
