[package]
name = "bag"
version = "0.1.0"
edition = "2024"

[dependencies]
fundsp = "0.20.0"
cpal = "0.15.3"
anyhow = "1.0.98"
mediapipe-rs = { git = "https://github.com/WasmEdge/mediapipe-rs.git" }
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["fs", "rt-multi-thread", "macros"] }
onnxruntime = "0.0.14"
opencv = { version = "0.94.4", default-features = false, features = [
    "videoio",
    "highgui",
] }
